k8s/postgres/postgres-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
  namespace: cineops
spec:
  podSelector:
    matchLabels:
      component: postgres
  
  policyTypes:
    - Ingress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            component: backend
      ports:
        - protocol: TCP
          port: 5432
